--- a/FrontEnd/src/app/contact/contact.component.html
+++ b/FrontEnd/src/app/contact/contact.component.html
@@ -1,3 +1,18 @@
 <section class="contact">
     <h1 class="heading">Contact</h1>
+
+    <form>
+        <div class="form-group">
+            <h3>Topic</h3>
+            <input type="text" name="topic" class="form-control">
+        </div>
+        <div class="form-group">
+            <h3>Message</h3>
+            <textarea name="message" rows="10" class="form-control"></textarea>
+        </div>
+        <div class="form-group">
+            <button type="button" class="btn next">Next</button>
+        </div>
+    </form>
+
 </section>
