--- a/FrontEnd/src/app/header/header.component.html
+++ b/FrontEnd/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<header class="header">
-    <div class="header__logo-box">
-        <img src="" alt="Logo" class="header__logo">
+<header class="main-header">
+    <div><img src="./assets/JA.png" alt="Logo" class="main-header__brand"></div>
+    <div class="main-header__bars">
+        <a href=""><i class="fa fa-bars"></i></a>
     </div>
-    <div class="header__text-box"></div>
 </header>
