--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,8 +1,7 @@
 <section class="home">
     <div class="heading-primary">
         <h1 class="heading-primary--main">
-            Jayson Aviso
-            
+            Jayson <strong>Aviso</strong>
         </h1>
         <h2 class="heading-primary--sub">
             Back-End Developer
@@ -11,7 +10,6 @@
                 <a href=""><i class="fa fa-github"></i></a>
             </span>
         </h2>
-        
-        <div class="home__resume"></div>
+        <div class="home__resume">Download Resume</div>
     </div>
 </section>
