--- a/FrontEnd/src/app/projects/projects.component.css
+++ b/FrontEnd/src/app/projects/projects.component.css
@@ -1,3 +1,8 @@
+.projects {
+    width: 80%;
+    margin: 0 auto 6em;
+}
+
 .heading {
     font-family: 'Kanit';
     letter-spacing: 0.05em;
@@ -5,14 +10,11 @@
     font-style: normal;
     font-weight: 900;
     font-size: 46px;
+    letter-spacing: 0.8px;
+    word-spacing: 1.6px;
     line-height: 87%;
-    padding: 30px;
+    padding: 8px;
     margin-bottom: 10px;
-}
-
-.project {
-    width: 80%;
-    margin: auto;
 }
 
 .project-name {
@@ -22,16 +24,62 @@
     font-weight: 600;
     font-size: 22px;
     line-height: 33px;
+    padding: 8px;
     color: #FFF7DE;
 }
 
 .project-img {
+    position: relative;
     width: 100%;
     height: 250px;
-    background: #FFFFFF;
+    background: #FFF7DE;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 4px;
-    overflow: hidden;
-    margin: 20px auto;
+    /* overflow: hidden; */
+    margin: 20px 8px;
+}
 
+.btn--white {
+    font-family: 'Kanit';
+    font-weight: 600;
+    letter-spacing: .8px;
+    text-transform: uppercase;
+    background-color: #FFF7DE;
+    color: #eb6864;
+    border: 1px solid #eb6864;
+    margin: 10%;
+}
+
+.btn--white:hover {
+    color: #FFF7DE;
+    background-color: #eb6864;
+}
+
+.button-group {
+    text-align: center;
+    position: absolute;
+    bottom: 50%;
+    right: 50%;
+    transform:translate(50%, 50%);
+    margin-right: auto;
+    margin-left: auto;
+    opacity: 0;
+}
+
+.project-img:hover .button-group
+ {
+    transition: .8s ease-in-out;
+    opacity: 1;
+}
+
+.project-content {
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 1.6px;
+    word-spacing: 1.6px;
+    padding: 8px;
+}
+
+.ml {
+    margin-left: 10%;
 }
