Adding responsive functionalities

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,9 +1,11 @@
 <app-header></app-header>
-<main class="main-body">
-  <app-nav></app-nav>
-  <app-home></app-home>
-  <app-about></app-about>
-  <app-skills></app-skills>
-  <app-projects></app-projects>
-  <app-contact></app-contact>
-</main>
+<div class="container">
+  <main class="main-body">
+    <app-nav class="nav"></app-nav>
+    <app-home class="home"></app-home>
+    <app-about class="about"></app-about>
+    <app-skills class="skills"></app-skills>
+    <app-projects class="projects"></app-projects>
+    <app-contact class="contact"></app-contact>
+  </main>
+</div>
