--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,15 +1,22 @@
 <section class="home">
     <div class="heading-primary">
-        <h1 class="heading-primary--main">
-            Jayson <strong>Aviso</strong>
-        </h1>
-        <h2 class="heading-primary--sub">
-            Back-End Developer
-            <span class="home__img-logos">
-                <a href=""><i class="fa fa-linkedin"></i></a>
-                <a href=""><i class="fa fa-github"></i></a>
-            </span>
-        </h2>
+        <span>
+            <h1 class="heading-primary--main">Jayson</h1>
+        </span>
+        <span>
+            <h1 class="heading-primary--main emp">Aviso</h1>
+        </span>
+        <span>
+            <h2 class="heading-primary--sub">
+                Back-End<br> Developer
+            </h2>
+        </span>
+        <span class="home__img-logos">
+            <a href=""><i class="fa fa-linkedin"></i></a>
+            <a href=""><i class="fa fa-github"></i></a>
+            <a href=""><i class="fa fa-github"></i></a>
+        </span>
+        
         <div class="home__resume">Download Resume</div>
     </div>
 </section>
