--- a/FrontEnd/src/app/nav/nav.component.css
+++ b/FrontEnd/src/app/nav/nav.component.css
@@ -26,6 +26,8 @@ nav ul li a {
     text-decoration: none;
     font-size: 28px;
     font-weight: 600;
+    border-right: 3px solid rgba(0, 0, 0, 0);
+    padding-right: 10px;
     line-height: 42px;
     list-style: normal;
     opacity: .6;
@@ -33,15 +35,9 @@ nav ul li a {
 
 }
 
-/* nav ul li a::after {
-    content: " |";
-
-} */
-
 nav ul li a:hover,
 nav ul li a:active {
     color: #eb6864;
     border-right: 3px solid #eb6864;
-    padding-right: 5px;
     opacity: 1;
 }
