--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,11 +1,14 @@
-<app-header></app-header>
-<div class="container">
-  <main class="main-body">
-    <app-nav class="nav"></app-nav>
-    <app-home class="home"></app-home>
-    <app-about class="about"></app-about>
-    <app-skills class="skills"></app-skills>
-    <app-projects class="projects"></app-projects>
-    <app-contact class="contact"></app-contact>
-  </main>
-</div>
+
+  <app-header></app-header>
+  <div class="container">
+    <main class="main-body">
+      <app-nav class="nav"></app-nav>
+      <app-home class="home"></app-home>
+      <app-about class="about"></app-about>
+      <app-skills class="skills"></app-skills>
+      <app-projects class="projects"></app-projects>
+      <app-contact class="contact"></app-contact>
+    </main>
+    <div class="top"></div>
+  </div>
+
