--- a/FrontEnd/src/app/nav/nav.component.css
+++ b/FrontEnd/src/app/nav/nav.component.css
@@ -41,3 +41,16 @@ nav ul li a:active {
     border-right: 3px solid #eb6864;
     opacity: 1;
 }
+
+@media (min-width: 768px) {
+    nav ul li a {
+        font-size: 28px;
+        line-height: 36px;
+    }
+}
+@media (min-width: 1024px) {
+    nav ul li a {
+        font-size: 32px;
+        line-height: 42px;
+    }
+}
