--- a/FrontEnd/src/app/app.component.css
+++ b/FrontEnd/src/app/app.component.css
@@ -5,6 +5,10 @@
         justify-content: center;
         align-items: center;
     }
+    /* .main-body {
+        display: grid;
+        justify-items: start;
+    } */
 
     .main-body .nav {
         opacity: 0;;
@@ -14,19 +18,17 @@
         display: none;
     }
 
-    @media (min-width: 768px) and (max-width: 1019px) {
+  
+
+    @media (min-width: 640px) {
         .main-body {
         display: grid;
         grid-template-columns: auto auto;
         grid-template-rows: auto;
-        width: 90%;
-        justify-self: center;
+        width: 100%;
+        justify-items: center;
     }
 
-    .main-body app-nav {
-        display: contents;
-    }
-    
     .main-body .nav {
         opacity: 1;
         width: 40px;
@@ -36,42 +38,43 @@
 
     .main-body .home {
         grid-row: 1/2;
-        grid-column: 1/2;
+        grid-column: 1/3;
     }
 
     .main-body .about {
-        margin-right: 15%;
+        width: 90%;
         grid-row: 2/3;
-        grid-column: 1/2;
+        grid-column: 1/3;
     }
 
     .main-body .skills {
-        margin-right: 15%;
+        width: 90%;
         grid-row: 3/4;
-        grid-column: 1/2;
+        grid-column: 1/3;
     }
 
     .main-body .projects {
-        margin-right: 15%;
+        width: 90%;
         grid-row: 4/5;
-        grid-column: 1/2;
+        grid-column: 1/3;
     }
 
     .main-body .contact {
-        margin-right: 15%;
+        
+        width: 90%;
         grid-row: 5/6;
-        grid-column: 1/2;
+        grid-column: 1/3;
     }
     }
 
-    @media (min-width: 1020px) and (max-width: 1200px) {
+    @media (min-width: 768px) {
 
     .main-body {
         display: grid;
         grid-template-columns: auto auto;
         grid-template-rows: auto;
         width: 90%;
-        justify-self: center;
+        justify-items: start;
     }
 
     .main-body app-nav {
@@ -80,7 +83,7 @@
 
     .main-body .nav {
         opacity: 1;
-        width: 150px;
+        width: 50px;
         grid-row: 1/2;
         grid-column: 2/3;
     }
@@ -91,38 +94,42 @@
     }
 
     .main-body .about {
-        margin-right: 10%;
+        width: 70%;
+        margin-right: 15%;
         grid-row: 2/3;
         grid-column: 1/2;
     }
 
     .main-body .skills {
-        margin-right: 10%;
+        width: 70%;
+        margin-right: 15%;
         grid-row: 3/4;
         grid-column: 1/2;
     }
 
     .main-body .projects {
-        margin-right: 10%;
+        width: 70%;
+        margin-right: 15%;
         grid-row: 4/5;
         grid-column: 1/2;
     }
 
     .main-body .contact {
-        margin-right: 10%;
+        width: 70%;
+        margin-right: 15%;
         grid-row: 5/6;
         grid-column: 1/2;
     }
 
 }
 
-@media (min-width: 1201px) and (max-width: 1600px) {
+@media (min-width: 1024px) {
     .main-body {
         display: grid;
         grid-template-columns: auto auto;
         grid-template-rows: auto;
         width: 90%;
-        justify-self: center;
+        justify-items: start;
     }
 
     .main-body app-nav {
@@ -142,27 +149,30 @@
     }
 
     .main-body .about {
+        width: 70%;
         margin-right: 10%;
         grid-row: 2/3;
         grid-column: 1/2;
     }
 
     .main-body .skills {
+        width: 70%;
         margin-right: 10%;
         grid-row: 3/4;
         grid-column: 1/2;
     }
 
     .main-body .projects {
+        width: 70%;
         margin-right: 10%;
         grid-row: 4/5;
         grid-column: 1/2;
     }
 
     .main-body .contact {
+        width: 70%;
         margin-right: 10%;
         grid-row: 5/6;
         grid-column: 1/2;
     }
 }
-
