--- a/FrontEnd/src/app/header/header.component.css
+++ b/FrontEnd/src/app/header/header.component.css
@@ -19,10 +19,6 @@
     vertical-align: middle;
 }
 
-.main-header__bars .fa {
-    display: none;
-}
-
 .main-header__bars a {
     color: #FFF7DE;
     opacity: .8;
@@ -36,8 +32,67 @@
     transition: .3s;
 }
 
-@media (max-width: 767px) {
-    .main-header__bars .fa {
-        display: contents;
+.main-header__bars #buttonMenu {
+    cursor: pointer;
+}
+
+#sideNav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: 0;
+    display: none;
+    cursor: pointer;
+    align-self: end;
+    flex-flow: column;
+    justify-items: flex-end;
+    align-items: flex-end;
+    padding: 10%;
+    z-index: 100;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    transition: 0.5s;
+}
+
+#sideNav .closeButton {
+    position: relative;
+    top: 0;
+    right: 0;
+}
+
+#sideNav ul li {
+    list-style-type: none;
+    text-align: right;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+#sideNav ul li a {
+    font-family: 'Kanit';
+    color: #FFF7DE;
+    text-decoration: none;
+    font-size: 28px;
+    font-weight: 600;
+    border-right: 3px solid rgba(0, 0, 0, 0);
+    padding-right: 10px;
+    line-height: 42px;
+    list-style: normal;
+    opacity: .6;
+    transition: 0.3s;
+}
+
+#sideNav ul li a:hover,
+#sideNav ul li a:active {
+    color: #eb6864;
+    border-right: 3px solid #eb6864;
+    opacity: 1;
+}
+
+@media (min-width: 768px) {
+    .main-header__bars #buttonMenu {
+        display: none;
     }
 }
