--- a/FrontEnd/src/app/about/about.component.css
+++ b/FrontEnd/src/app/about/about.component.css
@@ -1,6 +1,24 @@
 .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-family: 'Kanit';
+    text-transform: uppercase;
     width: 90%;
-    margin: 0 auto 6em;
+    height: 100vh;
+}
+
+.heading {
+    font-family: 'Kanit'; 
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 46px;
+    line-height: 87%;
+    padding: 8px;
+    margin-top: 10rem;
 }
 
 .about p {
@@ -14,14 +32,3 @@
     padding:  8px;
 }
 
-.heading {
-    font-family: 'Kanit';
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 46px;
-    line-height: 87%;
-    padding: 8px;
-    margin: 20px 0;
-}
