--- a/FrontEnd/src/app/contact/contact.component.css
+++ b/FrontEnd/src/app/contact/contact.component.css
@@ -1,9 +1,29 @@
 .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-family: 'Kanit';
+    text-transform: uppercase;
     width: 90%;
-    margin: 0 auto 6em;
+    height: 100vh;
+    
 }
-
+/* margin: 0 auto 6em; */
 .heading {
+    font-family: 'Kanit';
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    font-style: normal;
+    font-weight: 900;
+    letter-spacing: 0.8px;
+    word-spacing: 1.6px;
+    font-size: 46px;
+    line-height: 87%;
+    padding: 8px;
+    margin-top: 10rem;
+}
+/* .heading {
     font-family: 'Kanit';
     letter-spacing: 0.05em;
     text-transform: uppercase;
@@ -15,6 +35,13 @@
     line-height: 87%;
     padding: 8px;
     margin-bottom: 10px;
+} */
+input,
+textarea {
+    background: #FFF7DE;;
+}
+form {
+    width: 100%;
 }
 .form-group {
     width: 100%;
@@ -31,7 +58,7 @@
     letter-spacing: 1.6px;
     text-align: left;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: #FFF7DE;
 }
 
 .next {
@@ -42,8 +69,8 @@
     box-sizing: border-box;
     width: 123px;
     height: 40px;
-    color: #FFFFFF;
-    border: 3px solid #FFFFFF;
+    color: #FFF7DE;
+    border: 3px solid #FFF7DE;
 }
 
 .next:hover {
