--- a/FrontEnd/src/app/header/header.component.css
+++ b/FrontEnd/src/app/header/header.component.css
@@ -1,4 +1,11 @@
-.main-header {
+mat-sidenav {
+    background: #0f172a;
+    width: 230px;
+    height: 100%;
+}
+
+
+/* .main-header {
     width: 100%;
     height: 10vh;
     padding: 16px 32px;
@@ -76,7 +83,7 @@
     text-decoration: none;
     font-size: 28px;
     font-weight: 600;
-    border-right: 3px solid rgba(0, 0, 0, 0);
+    border-right: 3px solid rgba(0, 0, 0, 1);
     padding-right: 10px;
     line-height: 42px;
     list-style: normal;
@@ -95,4 +102,4 @@
     .main-header__bars #buttonMenu {
         display: none;
     }
-}
+} */
