--- a/FrontEnd/src/app/skills/skills.component.css
+++ b/FrontEnd/src/app/skills/skills.component.css
@@ -1,17 +1,12 @@
 .skills {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-family: 'Kanit';
+    text-transform: uppercase;
     width: 90%;
-    margin: 0 auto 6em;
-}
-
-.skills p {
-    font-family: inherit;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.8px;
-    word-spacing: 1.6px;
-    padding: 8px;
+    height: 100vh;
 }
 
 .heading {
@@ -23,5 +18,16 @@
     font-size: 46px;
     line-height: 87%;
     padding: 8px;
-    margin: 20px 0;
+    margin-top: 10rem;
+}
+
+.skills p {
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
+    word-spacing: 1.6px;
+    padding: 8px;
 }
