Sending Message functions Added

--- a/FrontEnd/src/app/contact/contact.component.css
+++ b/FrontEnd/src/app/contact/contact.component.css
@@ -9,7 +9,6 @@
     height: 100vh;
     
 }
-/* margin: 0 auto 6em; */
 .heading {
     font-family: 'Kanit';
     letter-spacing: 0.05em;
@@ -23,22 +22,14 @@
     padding: 8px;
     margin-top: 10rem;
 }
-/* .heading {
-    font-family: 'Kanit';
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 46px;
-    letter-spacing: 0.8px;
-    word-spacing: 1.6px;
-    line-height: 87%;
-    padding: 8px;
-    margin-bottom: 10px;
-} */
+
 input,
 textarea {
-    background: #FFF7DE;;
+    background: #FFF7DE;
+}
+
+button:disabled {
+    cursor: not-allowed;
 }
 form {
     width: 100%;
