--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -14,7 +14,7 @@
         <span class="home__img-logos">
             <a href=""><i class="fa fa-linkedin"></i></a>
             <a href=""><i class="fa fa-github"></i></a>
-            <a href=""><i class="fa fa-github"></i></a>
+            <!-- <a href=""><fa-icon [icon]="faFacebook"></fa-icon></a> -->
         </span>
         
         <div class="home__resume">Download Resume</div>
