--- a/FrontEnd/src/app/projects/projects.component.css
+++ b/FrontEnd/src/app/projects/projects.component.css
@@ -41,7 +41,14 @@
     background: #FFF7DE;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 4px;
+    overflow: hidden;
 }
+
+.project-img img {
+    width: 100%;
+    height: 100%;
+}
+
 
 .btn--white {
     font-family: 'Kanit';
