--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -12,9 +12,9 @@
             </h2>
         </span>
         <span class="home__img-logos">
-            <a href=""><i class="fa fa-linkedin"></i></a>
-            <a href=""><i class="fa fa-github"></i></a>
-            <!-- <a href=""><fa-icon [icon]="faFacebook"></fa-icon></a> -->
+            <a href="https://www.linkedin.com/in/jayson-aviso-86449a193/" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="https://github.com/jaysonAviso" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="https://www.facebook.com/aviso.jayson" target="_blank"><fa-icon [icon]="faFaceBook"></fa-icon></a>
         </span>
         
         <div class="home__resume">Download Resume</div>
