--- a/FrontEnd/src/app/body/body.component.css
+++ b/FrontEnd/src/app/body/body.component.css
@@ -54,15 +54,19 @@ mat-icon {
 }
 
 .body-trimmed {
-    width: calc(100% - 15rem);
+    width: calc(100% - 22rem);
     margin-right: 16.5rem;
+    margin-left: 10rem;
+
 }
 
 .body-lg-trimmed {
-    width: calc(100% - 16rem);
-    margin-right: 16.5rem;
+    width: calc(100% - 26rem);
+    margin-right: 26.5rem;
+    margin-left: 10rem;
 }
 
 .body-md-screen {
     width: 100%;
 }
+
