Finalized and read to deploy

--- a/FrontEnd/src/app/about/about.component.css
+++ b/FrontEnd/src/app/about/about.component.css
@@ -26,6 +26,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
+    text-align: justify;
     line-height: 24px;
     letter-spacing: 0.8px;
     word-spacing: 1.6px;
