--- a/FrontEnd/src/app/skills/skills.component.html
+++ b/FrontEnd/src/app/skills/skills.component.html
@@ -1,4 +1,13 @@
 <section class="skills">
     <h1 class="heading">Skills</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsam debitis dolore. Ab tempora laboriosam quaerat voluptatum ut, minima provident at expedita facilis, vero sapiente accusamus ducimus dolorum optio nostrum.</p>
+    <p>Creating a web application using the programming language and framework below and interpersonal skills.</p>
+    <ul>
+        <li>C# programming language is my main programming language that I use to create a software application.</li>
+        <li>I use the .NET 6 framework to create a ASP.NET web application.</li>
+        <li>I preferred to use Angular JS for the frontend.</li>
+        <li>some knowledge in HTML and CSS for creating and designing the User Interface (UI) design.</li>
+        <li>Also, a basic knowledge in Vanilla JavaScript, SQL Server and SQLite.</li>
+        <li>Good communication skills.</li>
+        <li>Good organizational skills.</li>
+    </ul>
 </section>
