--- a/FrontEnd/src/app/projects/projects.component.css
+++ b/FrontEnd/src/app/projects/projects.component.css
@@ -88,7 +88,10 @@
     font-style: normal;
     letter-spacing: 1.6px;
     word-spacing: 1.6px;
+    text-align: justify;
     padding: 8px;
+    margin-right: 15px;
+    margin-bottom: 6rem;
 }
 
 .ml {
