--- a/FrontEnd/src/app/skills/skills.component.css
+++ b/FrontEnd/src/app/skills/skills.component.css
@@ -26,8 +26,16 @@
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
+    text-align: justify;
     line-height: 24px;
-    letter-spacing: 0.8px;
-    word-spacing: 1.6px;
+    letter-spacing: 1.2px;
+    word-spacing: 1.8px;
     padding: 8px;
+}
+
+.skills ul li {
+    font-size: 16px;
+    letter-spacing: 1px;
+    word-spacing: 1.5px;
+    margin-bottom: 10px;
 }
