sending Message fixed

--- a/FrontEnd/src/app/modals/contact-modal/contact-modal.component.html
+++ b/FrontEnd/src/app/modals/contact-modal/contact-modal.component.html
@@ -20,4 +20,14 @@
       <button [disabled]="!messageForm.valid" mat-button cdkFocusInitial>Send</button>
     </div>
   </form>
+  <div *ngIf="isLoading" class="loading">
+    <h4>Loading...</h4>
+    <mat-icon>donut_large</mat-icon>
+  </div>
+
+  <div *ngIf="messageSent" class="loading">
+    <h4>Sent</h4>
+    <mat-icon>done</mat-icon>
+  </div>
+
 </div>
