--- a/FrontEnd/src/app/modals/contact-modal/contact-modal.component.css
+++ b/FrontEnd/src/app/modals/contact-modal/contact-modal.component.css
@@ -1,4 +1,7 @@
-.cdk-overlay-pane
+.mat-dialog-container {
+    background: #202030;
+    color: #FFF7DE;
+}
 
 .container  {
     background: #202030;
@@ -27,6 +30,7 @@ form.contact h1 {
     align-self: center;
     width: 100%;
 }
+
 
 mat-form-field {
     font-family: 'Kanit';
@@ -97,16 +101,16 @@ button:hover:enabled{
     border-color: #FFF7DE;
 }
 
-.done {
+.loading {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
     text-transform: uppercase;
-    width: 321px;
+    width: 100%;
     height: 131px;
     background: #202030;
     color: #FFF7DE;
-    margin-top: 20px;
+    margin-top: 3rem;
 }
