Resume download added

--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -17,6 +17,6 @@
             <a href="https://www.facebook.com/aviso.jayson" target="_blank"><fa-icon [icon]="faFaceBook"></fa-icon></a>
         </span>
         
-        <div class="home__resume">Download Resume</div>
+        <a class="home__resume" href="./assets/Jayson-A-Resume.docx" target="_blank" download="Jayson-A-Resume.docx">Download Resume</a>
     </div>
 </section>
