--- a/FrontEnd/src/app/home/home.component.css
+++ b/FrontEnd/src/app/home/home.component.css
@@ -34,7 +34,7 @@
     grid-row: 2/4;
     grid-column: 2/3;
 }
-.heading-primary div {
+.heading-primary > a {
     grid-row: 4/5;
     grid-column: 1/3;
 }
@@ -126,6 +126,8 @@ fa-icon:hover {
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
+    text-decoration: none;
+    color: #FFF7DE;
     line-height: 27px;
     padding: 8px 16px;
     margin: 0 auto;
