--- a/FrontEnd/src/app/contact/contact.component.html
+++ b/FrontEnd/src/app/contact/contact.component.html
@@ -5,10 +5,10 @@
         <div class="form-group">
             <h3>Topic</h3>
             <input 
-                [(ngModel)]="messages.topic" 
+                [(ngModel)]="messages.subject" 
                 required
                 #topic="ngModel"
-                name="topic" 
+                name="subject" 
                 placeholder="Talk about..." 
                 type="text" 
                 class="form-control"
@@ -30,7 +30,8 @@
             <mat-error *ngIf="message.invalid && message.touched">Please enter a message</mat-error>
         </div>
         <div class="form-group">
-            <button [disabled]="!contactForm.valid" type="button" class="btn next" (click)="openDialog()">Next</button>
+            <a id="btnSend" class="btn next" (click)="sendMessage()">Send</a>
+            <!-- <button [disabled]="!contactForm.valid" type="button" class="btn next" (click)="openDialog()">Next</button> -->
         </div>
     </form>
 
